2004-02-20  Emmanuel Beffara  <manu@beffara.org>

	* Version 0.99.7 released.

	* src/modiles/epsfig.py: Added hooks for \epfbox and \epsffile.

2004-02-19  Emmanuel Beffara  <manu@beffara.org>

	* src/cmdline.py, src/cmd_info.py: Added info action --rules, allowed
	any rubber option in rubber-info.

	* src/modules/hyperref.py: Added support for hyperref.

	* src/modules/beamer.py: Update for the new version of beamer.

2004-02-18  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/ps2pdf.py: Added post-processor ps2pdf.

	* src/cmdline.py, src/cmd_pipe.py: Added command-line option "-o",
	unified command-line parsing.

	* src/util.py: Added class DependShell.

2004-02-16  Emmanuel Beffara  <manu@beffara.org>

	* doc/...: Documentation updates.

	* src/cmdline.py, src/cmd_pipe.py: Added options "-e" and "-z".

	* src/__init__.py, src/modules/...: Bugfix for cleaning.

	* src/modules/gz.py: Added module "gz" for gzipping the document.

2004-02-14  Emmanuel Beffara  <manu@beffara.org>

	* src/...: Made the Environment class into a proper dependency node.
 
	* src/modules/multibib.py: Added hooks for local \bibliography and
	\bibliographystyle.

	* src/__init__.py: Added a hook for \endinput.

	* src/modules/expand.py: Added some option processing in source
	expansion.

2004-02-11  Emmanuel Beffara  <manu@beffara.org>

	* doc/...: Documentation updates.

	* configure, setup.py, rubber.spec.in, debian/rules: Added
	installation of the info documentation.

	* src/modules/expand.py: Don't expand local classes by default.

	* src/util.py, src/graphics/__init__.py: Made the rules for graphics
	conversion safer.

	* src/__init__.py, src/cmdline.py, src/cmd_info.py: Let the classes
	derive from "object".

2004-01-24  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/bibtex.py, src/modules/multibib.sty: Added support for
	package "multibib", patching the bibtex module in the process.

	* src/cmdline.py: Added the installation directory in "--version".
